--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+* {
+ 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: 1px solid red;
+
+}
+
 .main-bg {
   background: url('../img/tallinn-center.jpg') center/cover;
 
@@ -23,13 +32,60 @@
 .overlay-text {
   color: white;
   text-align: center;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent) center;
+
 }
 
-.p-color{
+.p-color {
   background: #00171F;
 }
-.s-color{
-  background: #00A7E1;
+
+.s-color {
+  background-image: linear-gradient(#00171F, #00A7E1, #00171F);
+
+}
+
+.card-logo {
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px); /* Optional: slight movement for extra effect */
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+/* Faded in */
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20px); /* Optional: small movement for a smoother effect */
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+/* Visible state */
+.fade-in-section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+@media (min-width: 992px) {
+
   
+  .table-bordered tbody th, 
+  .table-bordered tbody td {
+      padding: 20px; /* Increases row height */
+  }
+
+  .table-bordered th, 
+  .table-bordered td {
+      width: 150px; /* Adjusts column width */
+  }
 }
