--- a/css/styles.css
+++ b/css/styles.css
@@ -94,35 +94,25 @@
   background: #00A7E1;
 }
 
-.curve {
-  position: absolute;
-  height: 225px;
+/* Container for the stripe */
+.stripe {
   width: 100%;
-
+  height: 2px; /* Adjust height as needed */
+   /* Background color of the stripe container */
+  overflow: hidden;
+  position: relative;
+  margin: 20px 0; /* Space between stripes */
 }
 
-.curve::before {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 55%;
+/* The fill element inside the stripe */
+.stripe .fill {
   height: 100%;
-  background-color: #00A7E1;
-  transform: translate(85%, 60%);
-
+  width: 0; /* Start with 0 width, hidden initially */
+  background-color: lightblue; /* Color of the filling effect */
+  transition: width 1.5s ease-out; /* Smooth transition for fill */
 }
 
-.curve::after {
-  content: "";
-  display: block;
-  position: absolute;
-  border-radius: 100% 50%;
-  width: 50%;
-  height: 100%;
-  background-color: #00171F;
-  transform: translate(-4%, 40%);
-}
+
 
 
 
@@ -140,4 +130,57 @@
     width: 150px;
     /* Adjusts column width */
   }
+}
+
+@mixin animation($name) {
+  @-webkit-keyframes #{$name} {
+    @content;
+  }
+
+  @-moz-keyframes #{$name} {
+    @content;
+  }
+
+  @-ms-keyframes #{$name} {
+    @content;
+  }
+
+  @-o-keyframes #{$name} {
+    @content;
+  }
+
+  @keyframes #{$name} {
+    @content;
+  }
+}
+
+@include animation(fadeIn) {
+  0% {
+    opacity: 0;
+    @include transform3d(rotateY(-2deg) rotateX(-2deg));
+  }
+  100% {
+    opacity: 1;
+    @include transform3d(rotateY(0deg) rotateX(0deg));
+  }
+}
+
+
+/* Initial state for the cards */
+.card {
+  opacity: 0;
+  transform: translateY(20px); /* Slightly below the viewport */
+  transition: opacity 1s ease, transform 1s ease; /* Smooth transition */
+}
+
+/* Visible state when cards enter the viewport */
+.card.visible {
+  opacity: 1;
+  transform: translateY(0); /* Return to normal position */
+}
+
+.card:hover {
+  transform: scale(1.05); /* Slightly enlarge the card */
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Add a shadow to give a 3D effect */
+  border: 5px solid #00A7E1;
 }
